# rusa

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  RELEASE_CHECKLIST.md  audit_report.md  defaults.yaml  docker-compose.yml  engines.yaml  gui_processing.py  pyproject.toml  roadmap.md  rusa.py  rusa_audio.py  rusa_cache.py  rusa_cli.py  rusa_engines.py  rusa_gui.py  rusa_mux.py  rusa_shared.py  rusa_subtitle.py  rusa_tts.py
.github/actions/rusa-action/: action.yml
.github/workflows/: test.yml  voiceover.yml
doc/: LANGUAGE_RECOMMENDATIONS.md  README.md  TTS_ENGINES.md  implementation_plan.md  roadmap.md
tests/: conftest.py  generate_fixtures.py  test_assembly.py  test_assembly_streaming.py  test_cache_cli.py  test_cli_regressions.py  test_cli_smoke.py  test_convert_wav.py  test_gui.py  test_gui_processing.py  test_merge_sentences.py  test_module_split.py  test_parse.py  test_regression.py  test_split.py  test_tts_cache.py  test_utils.py  test_voice_detect.py  test_wav_cache.py  test_webui.py  test_webui_server.py
tests/fixtures/: en.ru_subtitles.srt  en_subtitles.srt
webui/: __init__.py  __main__.py  app.py  components.py  config.py  server.py  utils.py
