[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rusa"
version = "1.0.0"
description = "Russian Voiceover for Movies — создаёт голосовой закадровый перевод по субтитрам"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "rusa contributors" },
]
dependencies = [
    "edge-tts>=7.0.0",
    "tqdm>=4.60",
    "langdetect>=1.0.9",
]

[project.scripts]
rusa = "rusa:main"

[tool.setuptools]
py-modules = ["rusa"]
