[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rusa"
version = "1.0.0"
description = "Russian Voiceover for Movies — создаёт голосовой закадровый перевод по субтитрам"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "rusa contributors" },
]
dependencies = [
    "edge-tts>=7.0.0",
    "tqdm>=4.60",
    "langdetect>=1.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
webui = ["gradio>=4.0"]

[project.scripts]
rusa = "rusa:main"
rusa-gui = "rusa_gui:main"

[project.urls]
Homepage = "https://github.com/bortoq/rusa"
Source = "https://github.com/bortoq/rusa"
BugTracker = "https://github.com/bortoq/rusa/issues"

[tool.setuptools]
py-modules = ["rusa", "rusa_audio", "rusa_cli", "rusa_engines", "rusa_mux", "rusa_shared", "rusa_subtitle", "rusa_tts", "rusa_gui"]
packages = ["webui"]
include-package-data = true
