[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rusa"
version = "0.2.0"
description = "CLI tool for AI voiceover translation from subtitles"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cli", "tts", "voiceover", "subtitles", "ffmpeg", "translation"]
authors = [
    { name = "rusa contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "edge-tts>=7.0.0",
    "tqdm>=4.60",
    "langdetect>=1.0.9",
    "pyyaml>=6.0",
]

[project.scripts]
rusa = "rusa:main"

[project.urls]
Homepage = "https://github.com/bortoq/rusa"
Source = "https://github.com/bortoq/rusa"
Documentation = "https://github.com/bortoq/rusa#readme"
Changelog = "https://github.com/bortoq/rusa/blob/master/CHANGELOG.md"
BugTracker = "https://github.com/bortoq/rusa/issues"

[tool.setuptools]
py-modules = ["rusa", "rusa_audio", "rusa_cli", "rusa_engines", "rusa_mux", "rusa_shared", "rusa_subtitle", "rusa_tts"]
include-package-data = true

[tool.ruff]
line-length = 100
